--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -1,18 +1,51 @@
-<!--
-  Generated template for the EventsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>events</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>
+      EventList
+    </ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="addEvent()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+      <button ion-button icon-only (click)="logout()">
+        <ion-icon name="exit"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content padding>
 
+<ion-content padding>
+  <h2>Events list</h2>
+
+  <ion-item>
+  <ion-avatar item-left>
+    <img [src]="userProfile.photoURL">
+  </ion-avatar>
+    <h2>{{ userProfile.displayName }}</h2>
+    <h3>{{ userProfile.email }}</h3>
+  </ion-item>
+
+
+
+  <ion-list>
+    <ion-item-sliding>
+      <ion-item *ngFor="let event of events | async">
+
+          <p>Name: {{event.nameEvent}}</p>
+          <p>Description: {{event.description}}</p>
+          <p>Info: {{event.info}}</p>
+          <p>Place: {{event.place}}</p>
+          <p>Date: {{event.date}}</p>
+      </ion-item>
+      <ion-item-options side="right">
+        <button ion-button color="secondary" (click)="showEvent()">
+          <ion-icon name="md-create">
+            +Info
+          </ion-icon>
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
