--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,17 +8,9 @@
 
 <ion-content padding>
 
-  <button ion-button block color="danger" (click)="loginUser()" *ngIf="!userProfile">
+  <button ion-button block color="danger" (click)="loginUser()" >
     <ion-icon name="logo-googleplus"></ion-icon>
     Login with Google
   </button>
 
-  <ion-item *ngIf="userProfile">
-    <ion-avatar item-left>
-      <img [src]="userProfile.photoURL">
-    </ion-avatar>
-    <h2>{{ userProfile.displayName }}</h2>
-    <h3>{{ userProfile.email }}</h3>
-    <p>Holi</p>
-  </ion-item>
 </ion-content>
